added index.html and style.css

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
   <head>
     <title>Document</title>
     <link href="styles.css" rel="stylesheet" />
@@ -16,7 +15,6 @@
           <a href="">Contact</a>
           <a href="" class="btn btn-primary">Sign Up</a>
         </div>
-
       </div>
     </header>
     <section class="hero">
@@ -24,6 +22,22 @@
       <p>Build something simple and beautifull</p>
       <button class="btn btn-primary">Get Started</button>
     </section>
+    <div class="features">
+      <div>
+        <h1>Feature One</h1>
+        <p>Quick intro to the first feature.</p>
+      </div>
+      <div>
+        <h1>Feature Two</h1>
+        <p>Quick intro to the second feature.</p>
+      </div>
+      <div>
+        <h1>Feature Three</h1>
+        <p>Quick intro to thr third feature.</p>
+      </div>
+    </div>
+    <footer>
+      <p>&copy; 2025 MySite.All rights reserved</p>
+    </footer>
   </body>
-
 </html>
