added the classes

--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
       <button class="btn btn-primary">Get Started</button>
     </section>
     <div class="features">
-      <div>
+      <div class="card">
         <h1>Feature One</h1>
         <p>Quick intro to the first feature.</p>
       </div>
-      <div>
+      <div class="card">
         <h1>Feature Two</h1>
         <p>Quick intro to the second feature.</p>
       </div>
-      <div>
+      <div class="card">
         <h1>Feature Three</h1>
         <p>Quick intro to thr third feature.</p>
       </div>
